--- a/challenge1/style.css
+++ b/challenge1/style.css
@@ -1,154 +1,210 @@
 :root {
-    --basic: #fff;
-    --primary-light: #FFDCD4;
-    --primary-dark: #E7AFA3;
-    --secondary: #2F4456;    
+  --basic: #fff;
+  --primary-light: #FFDCD4;
+  --primary-dark: #E7AFA3;
+  --secondary: #2F4456;    
 }
+
+
+/* website */
+
 body {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  font-family: sans-serif;
-  background-color: var(--basic);
-  overflow: hidden;
+position: absolute;
+width: 100%;
+height: 100%;
+font-family: sans-serif;
+background-color: var(--basic);
+overflow: hidden;
 }
 .container {
-  position: relative;
-  width: 600px;
-  margin: auto;
-  /* height: 320px; */
-  background-color: var(--basic);
-  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
-  top: 50%;
-  margin-top: -160px;
+position: relative;
+width: 600px;
+margin: auto;
+height: 320px;
+background-color: var(--basic);
+box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
+top: 50%;
+margin-top: -160px;
 }
 
 /* info */
 .container-info {
-  overflow: hidden;
-  position: absolute;
-  /* left: 30px; */
-  top: -30px;
-  left: 300px;
-  width: 300px;
-  height: 380px;
-  background-color: var(--primary-light);
+overflow: hidden;
+position: absolute;
+/* left: 30px; */
+top: -30px;
+left: 300px;
+width: 300px;
+height: 380px;
+background-color: var(--primary-light);
 
-  transition: all 0.2s;
+transition: all 0.2s;
 }
 
 .info-item {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
+position: absolute;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+opacity: 1;
 
-  transition: all 0.1s;
+transition: all 0.1s;
 }
 
 .sign-up {
-  opacity: 1;
-  transition: 0.3s;
-  transition-delay: 0.05s;
+opacity: 1;
+transition: 0.3s;
+transition-delay: 0.05s;
 }
 .log-in {
-  /* position: absolute; */
-  right: 100%;
-  opacity: 0;
-  background-color: var(--secondary);
-  color: var(--primary-light);
+right: 100%;
+opacity: 0;
+background-color: var(--secondary);
+color: var(--primary-light);
 }
 
 .container.sign-up .container-info { 
-  left: 0;
+left: 0;
 }
 .container.sign-up .container-info .info-item.log-in {
-  left: 0;
-  opacity: 1;
+left: 0;
+opacity: 1;
 }
 .container.sign-up .container-info .info-item.sign-up {
-  right: 0;
-  opacity: 0;
-  transition: 0.3s;
-  transition-delay: 0.05s;
+right: 0;
+opacity: 0;
+transition: 0.3s;
+transition-delay: 0.05s;
 }
 
 /* form */
 .container-form {
-  font-size: 0;
+font-size: 0;
 }
 .form-item {
-  text-align: center;
-  font-size: 16px;
-  width: 300px;
-  height: 320px;
-  display: inline-block;
-  vertical-align: top;
-  opacity: 1;
+text-align: center;
+font-size: 16px;
+width: 300px;
+height: 320px;
+display: inline-block;
+vertical-align: top;
+opacity: 1;
 }
 .table {
-  display: table;
-  width: 100%;
-  height: 100%;
+display: table;
+width: 100%;
+height: 100%;
 }
 .table-cell {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
+display: table-cell;
+vertical-align: middle;
+text-align: center;
 }
 
 /* form: elements */
 .heading {
-  text-align: center;
-  padding-top: 10px;
-  height: 40px;
+text-align: center;
+padding-top: 10px;
+height: 40px;
 }
 
 .form {
-    height: 140px;
+  height: 140px;
 }
 
 .form, .swap {
-  font-size: 13px;
-  padding: 30px;
-  text-align: left;
+font-size: 13px;
+padding: 30px;
+text-align: left;
 }  
 
 input, .btn {
-  padding: 5px 12px;
-  cursor: pointer;
+padding: 5px 12px;
+cursor: pointer;
 }
 input {
-  margin: 0 auto 10px;
-  display: block;
-  width: 210px;
+margin: 0 auto 10px;
+display: block;
+width: 210px;
 }
 
 .btn {
-  text-align: center;
-  border-radius: 18px;
-  border: none;
-  color: var(--basic);
+text-align: center;
+border-radius: 18px;
+border: none;
+color: var(--basic);
 }
 .login .btn {
-  background-color: var(--primary-dark);
+background-color: var(--primary-dark);
 }
 .register .btn {
-  background-color: var(--secondary);
+background-color: var(--secondary);
 }
 
 .swap {
-  background-color: transparent;
-  text-decoration-line: underline;
-  text-align: right;
-  cursor: pointer;
+background-color: transparent;
+text-decoration-line: underline;
+text-align: right;
+cursor: pointer;
 }
 .login .swap:hover {
-  color: var(--primary-light);
+color: var(--primary-light);
 }
 .register .swap:hover {
-  color: var(--secondary);
-  opacity: 0.6;
+color: var(--secondary);
+opacity: 0.6;
+}
+
+/* mobile */
+@media (max-width: 500px) {
+
+.container {
+  width: 300px;
+  height: 500px;
+  top: 40%;
+}
+
+.container-info {
+  display: none;
+}
+
+.container-form .form-item.login .info-item.log-in {
+  position: static;
+  left: 0;
+  top: 0px;
+  width: 100%;
+  height: 50%;
+  opacity: 1;
+
+  transition: all 0.1s;
+} 
+
+.container-form {
+  width: 40%;
+}
+
+.info-item { 
+  justify-content: left;
+}
+
+.table-cell {
+  text-align: left;
+  padding-left: 30px;
+}
+
+.container.sign-up .container-form .form-item.login {
+  visibility: hidden;
+}
+
+.container .container-form .form-item.register {
+  visibility: hidden;
+}
+
+.container.sign-up .container-form .form-item.register {
+  visibility: visible;
+  transition: 0.3s;
+  transition-delay: 0.05s;
+}
+
 }
