--- a/challenge 2/style.css
+++ b/challenge 2/style.css
@@ -165,6 +165,10 @@ input {
   opacity: 0.6;
 }
 
+#icon {
+  display: none;
+}
+
 }
 
 /* mobile */
@@ -181,7 +185,7 @@ input {
 
 .container {
   width: 300px;
-  height: 500px;
+  height: 480px;
   top: 35%;
 }
 .container-info {
@@ -213,28 +217,30 @@ input {
   background-color: var(--primary-light);
   color: var(--dark);
 }
-.container.sign-up .info-item.sign-up {
+.info-item.sign-up {
   background-color: var(--secondary);
   color: var(--primary-dark);
   opacity: 0.9;
 }
 
 /* initial */
-.form-item.register {
+/* .form-item.register { */
+.form-item.login {
   display: none;
 }
 
 /* transition */
-.container.sign-up .form-item.login { 
+/* .container.sign-up .form-item.login {  */
+.container.sign-up .form-item.register {
   display: none;
   /* animation-name: slide;
   animation-duration: 0.2s;
   animation-direction: reverse; */
   /* animation: slide 0.2s; */
 }
-.container.sign-up .form-item.register {
+/* .container.sign-up .form-item.register { */
+.container.sign-up .form-item.login { 
   display: block;
-
   /* animation: slide 0.2s; */
 }
 /* 
