--- a/challenge 2/style.css
+++ b/challenge 2/style.css
@@ -85,6 +85,7 @@ body {
 .container-form {
   font-size: 0;
   background-color: var(--basic);
+  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
 }
 .form-item {
   text-align: center;
@@ -109,6 +110,9 @@ body {
 
 /* hide mobile attributes */
 .container-form .form-item .info-item {
+  display: none;
+}
+.blank {
   display: none;
 }
 
@@ -170,6 +174,7 @@ input {
   display: none;
 }
 
+
 }
 
 /* mobile */
@@ -183,6 +188,7 @@ input {
   left: -340px;
   
   /* overflow: hidden;  */
+
 }
 .container-info {
   display: none;
