--- a/challenge 2/style.css
+++ b/challenge 2/style.css
@@ -200,7 +200,6 @@ input {
   width: 340px;
 }
 
-
 .overlay {
   position: absolute; 
   display: block; 
@@ -230,8 +229,6 @@ input {
   opacity: 1;
   justify-content: left;
   font-size: 90%;
-
-  transition: all 0.2s;
 }
 .table-cell {
   text-align: left;
@@ -240,10 +237,10 @@ input {
 
 /* cmpts */
 #icon {
+  display: initial;
   position: absolute;
-  top: 258px;
-  right: 33px;
-  width: 24px;
+  top: 262px;
+  left: 284px;
   height: 24px;
 }
 .heading {
