--- a/challenge 2/style.css
+++ b/challenge 2/style.css
@@ -20,16 +20,26 @@ body {
   position: relative;
   margin: auto;
   background-color: var(--basic);
+  top: 50%;
 
   /* changed for mobile */
   width: 600px;
   height: 320px;
-  top: 50%;
   margin-top: -160px; 
 }
-.container-form .form-item .info-item, .blank {
-  display: none;
+
+/* info */
+.table {
+  display: table;
+  width: 100%;
+  height: 100%;
 }
+.table-cell {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
 /* info (hidden for mobile) */
 .container-info {
   overflow: hidden;
@@ -49,8 +59,7 @@ body {
   height: 100%;
 }
 
-.log-in {
-  right: 100%;
+.info-item.sign-up {
   background-color: var(--secondary);
   color: var(--primary-light);
   opacity: 0;
@@ -58,12 +67,10 @@ body {
 .container.sign-up .container-info { 
   left: 0;
 }
-.container.sign-up .container-info .info-item.log-in {
-  left: 0;
+.container.sign-up .container-info .info-item.sign-up {
   opacity: 1;
 }
-.container.sign-up .container-info .info-item.sign-up {
-  right: 0;
+.container.sign-up .container-info .info-item.log-in {
   opacity: 0;
 }
 
@@ -81,15 +88,8 @@ body {
   background-color: var(--basic);
   opacity: 1;
 }
-.table {
-  display: table;
-  width: 100%;
-  height: 100%;
-}
-.table-cell {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
+.container-form .form-item .info-item {
+  display: none;
 }
 
 /* form: elements */
@@ -114,7 +114,7 @@ input, .btn {
   cursor: pointer;
 }
 input {
-  margin: 0 auto 10px;
+  margin: 2px 0 10px;
   display: block;
   width: 210px;
   border-width: 0.5px;
@@ -160,29 +160,28 @@ body {
 }
 
 .container {
-  width: auto;
-  height: auto;  
+  width: 337px;
+  height: 470px;
   margin-top: -235px;
-  left: -320px;
+  /* margin: 0; */
+  left: -337px;
 }
  
-.container-form .form-item .info-item {
-  display: inline-block;
-  position: static;
-  left: 0;
-  top: 0;
-  width: 337px;
-  height: 50%;
-  opacity: 1;
-  justify-content: left;
-  font-size: 90%;
-}
 .container-info {
   display: none;
 }
-
+.container-form .form-item .info-item {
+  display: inline-block;
+  position: static;
+  justify-content: left;
+  /* left: 0;
+  top: 0; */
+  width: 337px;
+  opacity: 1;
+  font-size: 90%;
+}
 .container-form {
-  width: 300%;
+  width: 674px;
   box-shadow: none;
 }
 .form-item {
@@ -204,8 +203,8 @@ input {
 #icon {
   display: initial;
   position: absolute;
-  top: 241px;
-  left: 280px;
+  top: 242px;
+  left: 276px;
   height: 24px;
 }
 
@@ -249,10 +248,6 @@ input {
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
 }
 .container.sign-up .container-form .form-item.register {
-  opacity: 0;
-}
-
-.form-item.blank {
   opacity: 0;
 }
 
